english menu on mobile element line overflow fix

--- a/style.css
+++ b/style.css
@@ -657,7 +657,7 @@ p.indent{
     }
     .menu{
 
-        width: 90%;
+        width: 92%;
         background-color: white;
     }
     .menu-container{
